<resources>
    <string name="app_name">ClockApp</string>
    <string name="format_24_hour">24小时</string>
    <string name="format_12_hour">12小时</string>
    
    <!-- 倒计时相关 -->
    <string name="start">开始</string>
    <string name="pause">暂停</string>
    <string name="reset">重置</string>
    <string name="hour_separator">时</string>
    <string name="minute_separator">分</string>
    <string name="timer">倒计时</string>
    <string name="timer_finished">倒计时结束！</string>
    <string name="stop_alarm">停止</string>
</resources>